@@ -1,4 +1,4 @@
-.\" RCSid "$Id: rmtxop.1,v 1.12 2019/07/20 00:57:43 greg Exp $"
+.\" RCSid "$Id: rmtxop.1,v 1.13 2019/08/12 01:20:25 greg Exp $"
 .TH RMTXOP 1 7/8/97 RADIANCE
 .SH NAME
 rmtxop - concatenate, add, multiply, divide, transpose, scale, and convert matrices
@@ -17,7 +17,7 @@ rmtxop - concatenate, add, multiply, divide, transpose, scale, and convert matri
 ]
 .B m1
 [
-.B "+*/"
+.B ".+*/"
 ]
 .B ".."
 .SH DESCRIPTION
@@ -155,6 +155,19 @@ To send the elements of a binary matrix to
 for further processing:
 .IP "" .2i
 rmtxop -fa orig.mtx | rcollate -ho -oc 1 | rcalc [operations]
+.SH NOTES
+Matrix multiplication is associative but not commutative, so order
+matters to the result.
+.I Rmtxop
+takes advantage of the associative property to evaluate the
+implicit equation from right to left when this reduces the
+number of basic operations.
+If the rightmost matrix is a column vector for example, it is
+much faster to concatenate from the right, and the result should
+be the same.
+This only applies to matrix multiplication.
+Element-wise addition, multiplication, and division are still
+evaluated from left to right.
 .SH AUTHOR
 Greg Ward
 .SH "SEE ALSO"
